--- a/math.tex
+++ b/math.tex
@@ -1,9 +1,9 @@
-\documentclass[a4j]{jsarticle}
+\documentclass{ltjsarticle}
 
 \title{CTRStation数学問題集}
 \author{Bamboo}
 
-\usepackage[dvipdfmx]{graphicx}
+\usepackage[luatex]{graphicx}
 \usepackage{amsmath, amssymb}
 
 \begin{document}
