--- a/math.tex
+++ b/math.tex
@@ -26,6 +26,7 @@
   \item 広義積分$\int_{0}^{∞}(x-a)^2be^{bx}\,dx$を求めよ．(Bamboo)
   \item $\sum_{n=1}^\infty \frac{1}{2^nn}$を求めよ．(Maru)
   \item $xy$平面における領域$D=\{(x,y)\,|\,x^2+y^2\le2y,\,x\ge0\}$の面積を求めよ．(Maru)
+
   \item $A=\begin{pmatrix}
     1 & 0 & -1 \\
     1 & -2 & 1 \\
@@ -37,7 +38,10 @@
     \item $A$の固有値を求めよ．
     \item $2\le n\in \mathbb{N}$のとき，$A^n$を求めよ．
   \end{enumerate}
+
   \setlength{\parskip}{4cm}
+
+  \item $\int_{0}^{\pi}\frac{x}{\csc x(1+\cos ^2 x)}dx$を求めよ．(Bamboo)
 
 \end{enumerate}
 
