--- a/math.tex
+++ b/math.tex
@@ -35,8 +35,8 @@
   \setlength{\parskip}{1.8cm}
   \begin{enumerate}
     \setlength{\parskip}{4cm}
-    \item $A$の固有値を求めよ．
-    \item $2\le n\in \mathbb{N}$のとき，$A^n$を求めよ．
+    \item $A$の固有値を求めよ．(Maru)
+    \item $2\le n\in \mathbb{N}$のとき，$A^n$を求めよ．(Maru)
   \end{enumerate}
 
   \setlength{\parskip}{4cm}
