--- a/math.tex
+++ b/math.tex
@@ -42,6 +42,7 @@
   \setlength{\parskip}{4cm}
 
   \item $\int_{0}^{\pi}\frac{x}{\csc x(1+\cos ^2 x)}dx$を求めよ．(Bamboo)
+  \item $\ln x\frac{dy}{dx}=y$について，$y$を$x$の式で表せ．(Bamboo)
 
 \end{enumerate}
 
