--- a/math.tex
+++ b/math.tex
@@ -43,6 +43,7 @@
 
   \item $\int_{0}^{\pi}\frac{x}{\csc x(1+\cos ^2 x)}dx$を求めよ．(Bamboo)
   \item $\ln x\frac{dy}{dx}=y$について，$y$を$x$の式で表せ．(Bamboo)
+  \item 対称行列$A=A^2$があるとき，$A$の固有値を求めよ．(Bamboo)
 
 \end{enumerate}
 
