--- a/math.tex
+++ b/math.tex
@@ -44,6 +44,8 @@
   \item $\int_{0}^{\pi}\frac{x}{\csc x(1+\cos ^2 x)}dx$を求めよ．(Bamboo)
   \item $\ln x\frac{dy}{dx}=y$について，$y$を$x$の式で表せ．(Bamboo)
   \item 対称行列$A=A^2$があるとき，$A$の固有値を求めよ．(Bamboo)
+  \item $AB=E+BA$となる正方行列$A$, $B$が存在しないことを証明せよ．(Bamboo)
+  \item 正方行列$A$, $B$について，$(AB)'=A'B+AB'$が成り立つことを示せ．(Bamboo)
 
 \end{enumerate}
 
